name:                AT
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AT#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable AT-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-server
                     , network
                     , url
                     , gloss

source-repository head
  type:     git
  location: https://github.com/githubuser/AT
